[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dailalib"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]
license = {text = "BSD 2 Clause"}
description = "Decompiler Artificial Intelligence Language Assistant"
urls = {Homepage = "https://github.com/mahaloz/DAILA"}
requires-python = ">= 3.5"
dependencies = [
    "openai>=0.27.4",
    "binsync",
    "PySide6-Essentials",
    "tiktoken",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
daila = "dailalib.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
daila = ["plugins/*.py"]

[tool.setuptools.dynamic]
version = {attr = "dailalib.__version__"}
