[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dailalib"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
license = {text = "BSD 2 Clause"}
description = "The Decompiler Artificial Intelligence Language Assistant (DAILA) is a tool for adding AI to decompilers."
urls = {Homepage = "https://github.com/mahaloz/DAILA"}
requires-python = ">= 3.8"
dependencies = [
    "openai>=1.0.0",
    "libbs>=0.6.10",
    "tiktoken",
    "varbert>=2.0.2"
]
dynamic = ["version"]

[project.optional-dependencies]
ghidra = [
    "libbs[ghidra]",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
daila = "dailalib.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "dailalib.__version__"}

