[metadata]
name = dailalib
version = attr: dailalib.__version__
url = https://github.com/mahaloz/DAILA
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = Decompiler Artificial Intelligence Language Assistant
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    openai>=1.0.0
    yodalib
    PySide6-Essentials
    tiktoken

python_requires = >= 3.5
include_package_data = True
packages = find:

[options.package_data]
daila =
    plugins/*.py

[options.entry_points]
console_scripts =
    daila = dailalib.__main__:main
