[metadata]
name = dailalib
version = attr: dailalib.__version__
url = https://github.com/mahaloz/DAILA
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
license = BSD 2 Clause
license_files = LICENSE
description = The Decompiler Artificial Intelligence Language Assistant (DAILA) is a tool for adding AI to decompilers.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    litellm>=1.44.27
    tiktoken
    Jinja2
    libbs>=2.8.1

python_requires = >= 3.10
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    daila = dailalib.__main__:main

[options.extras_require]
full =
    varbert>=2.3.0
    PySide6-Essentials>=6.4.2

